--- a/templates/base.html
+++ b/templates/base.html
@@ -4,12 +4,15 @@
 
     <head>
         <title>The head.</title>
+        <h1>this is head</h1>
     </head>
 
 
     <body>
-        <h1>This is the body.</h1>
-
+       
+        {% block content %}
+        
+        {% endblock content %}
 
     </body>
 
