--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,17 @@
 
 
         {%  if request.user.is_authenticated %}
-            <p>Hello, {{ request.user.username }}</p> | <a href="{% url 'logout' %}">logout</a>
+            <p>
+                <a href="{% url 'home' %}">Home</a> |
+                <a href="{% url 'logout' %}">logout</a> |
+                    Hello, {{ request.user.username }}
+            </p> 
         {% else %}
-            <p><a href="{% url 'register' %}">Register</a> | <a href="">login</a></p>
+            <p>
+                <a href="{% url 'home' %}">Home</a> |
+                <a href="{% url 'register' %}">Register</a> |
+                <a href="{% url 'login' %}">login</a>
+            </p>
         {% endif %}
     
     </head>
