--- a/personal/templates/personal/home.html
+++ b/personal/templates/personal/home.html
@@ -3,19 +3,22 @@
 
 {% block content %}
 
-    <div style="border: 2px solid black;">
-        <p>
-            <ul>
-                {% for user in users %}
-                <li>
-                    {{ user.username }}
-                </li>
-                {% empty %}
-                    <li>There are no users to display.</li>
-                {% endfor %}
-            </ul>
-        </p>
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">CodingWitchProject</h1>
+    <p class="lead">Learn to craft great products using your coding wizardry!</p>
+</div>
+
+<div class="container">
+    <div class="d-flex flex-column">
+        <h3>Registered Users</h3>
+            
+    {% for user in users %}
+        <p>{{ user.username }}</p>
+    {% endfor %}
     </div>
+</div>
+
+        
    
 
 {% endblock content %}
