--- a/account/templates/account/account.html
+++ b/account/templates/account/account.html
@@ -2,31 +2,68 @@
 
 
 {% block content %}
-<form  method='post'>
-{% csrf_token %}
 
-{% for field in form %}
-    <p>
-        {{ field.label_tag }}
-        {{ field }}
+<style type="text/css">
 
-        {% if field.help_text %}
-            <small style="color: grey;">{{ field.help_text }}</small>
-        {% endif %}
-        
-        {% for error in field.errors %}
-            <p style="color: red;"> {{ error }}</p>
-        {% endfor %}
-    </p>
-{% endfor %}
+    .form-signin {
+      width: 100%;
+      max-width: 330px;
+      padding: 15px;
+      margin: auto;
+    }
+    .form-signin .form-control {
+      position: relative;
+      box-sizing: border-box;
+      height: auto;
+      padding: 10px;
+      font-size: 16px;
+    }
+    .form-signin .form-control:focus {
+      z-index: 2;
+    }
+    .form-signin input[type="email"] {
+      margin-bottom: 10px;
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+    .form-signin input[type="username"] {
+      margin-bottom: 10px;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+    .h3{
+        text-align: center;
+    }
+    </style>
+    
+    
+        <form method="POST" class="form-signin">
+            {% csrf_token %}
+            <h1 class="h3 mb-3 font-weight-normal">Account</h1>
+            
+            <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus value="{{form.initial.email}}">
+            
+            <input type="text" name="username" id="inputUsername" class="form-control" placeholder="Username" required value="{{form.initial.username}}">
+            
+                {% for field in form %}
+                    <p>
+                        {% for error in field.errors %}
+                            <p style="color: red;"> {{ error }}</p>
+                        {% endfor %}
+                    </p>
+                {% endfor %}
+    
+                {% if form.non_field_errors %}
+                    <div style="color: red;">
+                        <p>{{form.non_field_errors}}</p>
+                    </div>           
+                {% endif %}
 
-{% if form.non_field_errors %}
-    <div style="color: red;">
-        <p>{{form.non_field_errors}}</p>
-    </div>           
-{% endif %}
-
-<button type="submit" >Save Changes</button>
-</form>
+                {% if success_message %}
+                    <p style=" color: green; text-align:center;">{{success_message}}</p>
+                {% endif %}
+    
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Save Changes</button>   
+        </form>
 
 {%  endblock content %}
