--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -2,31 +2,66 @@
 
 
 {% block content %}
-<form  method='post'>
-{% csrf_token %}
 
-{% for field in form %}
-    <p>
-        {{ field.label_tag }}
-        {{ field }}
+<style type="text/css">
 
-        {% if field.help_text %}
-            <small style="color: grey;">{{ field.help_text }}</small>
-        {% endif %}
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+.h3{
+        text-align: center;
+}
+</style>
+
+
+    <form method="POST" class="form-signin">
+        {% csrf_token %}
+        <h1 class="h3 mb-3 font-weight-normal">Please log in</h1>
         
-        {% for error in field.errors %}
-            <p style="color: red;"> {{ error }}</p>
-        {% endfor %}
-    </p>
-{% endfor %}
+        <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        
+        <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        
+            {% for field in form %}
+                <p>
+                    {% for error in field.errors %}
+                        <p style="color: red;"> {{ error }}</p>
+                    {% endfor %}
+                </p>
+            {% endfor %}
 
-{% if form.non_field_errors %}
-    <div style="color: red;">
-        <p>{{form.non_field_errors}}</p>
-    </div>           
-{% endif %}
+            {% if form.non_field_errors %}
+                <div style="color: red;">
+                    <p>{{form.non_field_errors}}</p>
+                </div>           
+            {% endif %}
 
-<button type="submit">Log in</button>
-</form>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
+        
+            </form>
 
 {%  endblock content %}
