--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -2,25 +2,76 @@
 
 {% block content %}
 
-<form  method='post'>
-    {% csrf_token %}
+<style type="text/css">
 
-    {% for field in form %}
-        <p>
-            {{ field.label_tag }}
-            {{ field }}
+    .form-signin {
+      width: 100%;
+      max-width: 330px;
+      padding: 15px;
+      margin: auto;
+    }
+    
+    .form-signin .form-control {
+      position: relative;
+      box-sizing: border-box;
+      height: auto;
+      padding: 10px;
+      font-size: 16px;
+    }
+    .form-signin .form-control:focus {
+      z-index: 2;
+    }
+    .form-signin input[type="email"] {
+      margin-bottom: 10px;
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+    .form-signin input[type="text"] {
+      margin-bottom: 10px;
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+    .form-signin input[type="password"] {
+      margin-bottom: -1px;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+    .h3{
+        text-align: center;
+    }
 
-            {% if field.help_text %}
-                <small style="color: grey;">{{ field.help_text }}</small>
-            {% endif %}
+    </style>
+    
+    
+        <form method="POST" class="form-signin">
+            {% csrf_token %}
+            <h1 class="h3 mb-3 font-weight-normal">Register an account</h1>
+            
+            <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
 
-            {% for error in field.errors %}
-                <p style="color: red;"> {{ error }}</p>
-            {% endfor %}
-        </p>
-    {% endfor %}
-    <button type="submit">Register</button>
+            <input type="text" name="username" id="inputUsername" class="form-control" placeholder="Username" required>
+            
+            <input type="password" name="password1" id="inputPassword1" class="form-control" placeholder="Password" required>
 
-</form>
+            <input type="password" name="password2" id="inputPassword2" class="form-control" placeholder="Confirm Password" required>
+            
+                {% for field in form %}
+                    <p>
+                        {% for error in field.errors %}
+                            <p style="color: red;"> {{ error }}</p>
+                        {% endfor %}
+                    </p>
+                {% endfor %}
+    
+                {% if form.non_field_errors %}
+                    <div style="color: red;">
+                        <p>{{form.non_field_errors}}</p>
+                    </div>           
+                {% endif %}
+    
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+            
+        </form>
+
 
 {%  endblock content %}
