added password change and password reset functionalities.

--- a/account/templates/account/account.html
+++ b/account/templates/account/account.html
@@ -65,5 +65,8 @@
     
             <button class="btn btn-lg btn-primary btn-block" type="submit">Save Changes</button>   
         </form>
+          <div class="d-flex flex-column">
+            <a href="{% url 'password_change' %}" class="m-auto">Change password</a>
+          </div>
 
 {%  endblock content %}
