--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -63,5 +63,8 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
         
             </form>
+            <div class="d-flex flex-column">
+              <a href="{% url 'password_reset' %}" class="m-auto">Forgot password?</a>
+            </div>
 
 {%  endblock content %}
