--- a/personal/templates/personal/home.html
+++ b/personal/templates/personal/home.html
@@ -4,23 +4,81 @@
 
 {% block content %}
 
-<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <div class="d-flex flex-column pb-3">
-        <img class="img-fluid mx-auto d-block" src="{% static 'witch_logo.png' %}" alt="codingwitchproject logo" width="72" height="72">
-    </div>
+<style type="text/css">
 
-    <h1 class="display-4">CodingWitchProject</h1>
-    <p class="lead">Learn to craft great products using your coding wizardry!</p>
-</div>
+@media (max-width: 768px){
+    .right-column{
+        margin-left: 0px;
+    }
+}
 
-<hr>
+@media(min-width: 768px){
+    .right-column{
+        margin-left: 20px;
+    }
+}
+
+.blog-post-container{
+    background-color: #fff;
+    margin-bottom: 20px;
+    width: 100%;
+}
+
+.create-post-bar{
+    background-color: #fff;
+    margin-bottom: 20px;
+}
+
+.left-column{
+    padding: 0px;
+}
+
+.right-colummn{
+    padding: 0px;
+}
+
+
+
+</style>
+
 <div class="container">
-    <div class="d-flex flex-column">
-        <h3>Registered Users</h3>
-            
-    {% for user in users %}
-        <p>{{ user.username }}</p>
-    {% endfor %}
+    <div class="row">
+
+        <!-- Right 'create post' bar -->
+        <div class="create-post-bar d-lg-none col-lg-7 offset-lg-1">
+            <a href="{% url 'blog:create' %}">Create post</a>
+        </div>
+        <!-- End right 'create post' bar -->
+
+        <!-- Blog feed -->
+        <div class="left-column col-lg-7 offset-lg-1">
+
+            <div class="blog-post-container">
+                <p>Thingy</p>
+            </div>
+            <div class="blog-post-container">
+                <p>Thingy</p>
+            </div>
+            <div class="blog-post-container">
+                <p>Thingy</p>
+            </div>
+
+        </div>
+        <!-- End blog feed -->
+
+        <!-- RIght 'create post' column -->
+        <div class="right-column col-lg-3 d-lg-flex d-none flex-column">
+            <div class="create-post-bar">
+                <p>stuff</p>
+                <p>stuff</p>
+                <p>stuff</p>
+                <p>stuff</p>
+                <a href="{% url 'blog:create' %}">Create Post</a>
+            </div>
+        </div>
+        <!-- End right 'create post' column -->
+
+        
     </div>
 </div>
 
