--- a/personal/templates/personal/home.html
+++ b/personal/templates/personal/home.html
@@ -1,88 +1,83 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% load static %}
 
-
 {% block content %}
-
 <style type="text/css">
 
-@media (max-width: 768px){
-    .right-column{
-        margin-left: 0px;
-    }
-}
+	@media (max-width: 768px) { 
+		.right-column{
+			margin-left: 0px;
+		}
+	}
 
-@media(min-width: 768px){
-    .right-column{
-        margin-left: 20px;
-    }
-}
+	@media (min-width: 768px) { 
+		.right-column{
+			margin-left: 20px;
+		}
+	}
 
-.blog-post-container{
-    background-color: #fff;
-    margin-bottom: 20px;
-    width: 100%;
-}
+	.blog-post-container{
+		margin-bottom: 20px;
+		width: 100%;
+	}
+	.create-post-bar{
+		background-color: #fff;
+		margin-bottom:20px;
+	}
 
-.create-post-bar{
-    background-color: #fff;
-    margin-bottom: 20px;
-}
+	.left-column{
+		padding:0px;
+	}
 
-.left-column{
-    padding: 0px;
-}
-
-.right-colummn{
-    padding: 0px;
-}
-
-
-
+	.right-column{
+		padding:0px;
+	}
+	.lead{
+		font-size: 17px;
+	}
 </style>
-
 <div class="container">
-    <div class="row">
+	<div class="row">
 
-        <!-- Right 'create post' bar -->
-        <div class="create-post-bar d-lg-none col-lg-7 offset-lg-1">
-            <a href="{% url 'blog:create' %}">Create post</a>
-        </div>
-        <!-- End right 'create post' bar -->
+		<!-- blog feed -->
+		<div class="left-column col-lg-7 offset-lg-1">
 
-        <!-- Blog feed -->
-        <div class="left-column col-lg-7 offset-lg-1">
+			<!-- Top 'create post' bar -->
+			<div class="d-lg-none mb-3">
+				<div class="card m-auto d-flex flex-column p-3">
+					<img class="img-fluid d-block m-auto pb-2" src="{% static 'codingwithmitch_logo.png' %}" width="72" height="72">
+					<p class="lead">In this course you'll learn how to build a simple blog with user registration and blog CRUD functionality. Django is a powerful 
+	  					framework and you'll see why in this course.</p>
+					<p class="m-auto"><a class="btn btn-primary" href="{% url 'blog:create' %}">Create post</a></p>
+				</div>
+			</div>
+			<!-- end Top 'create post' bar -->
 
-            <div class="blog-post-container">
-                <p>Thingy</p>
-            </div>
-            <div class="blog-post-container">
-                <p>Thingy</p>
-            </div>
-            <div class="blog-post-container">
-                <p>Thingy</p>
-            </div>
+			<!-- Blog posts-->
+			{% for post in blog_posts %}
+				<div class="blog-post-container">
+					{% include 'blog/snippets/blog_post_snippet.html' with blog_post=post %}
+				</div>
+			{% endfor %}
+			<!-- End Blog posts-->
+		</div>
+		<!-- end blog feed -->
 
-        </div>
-        <!-- End blog feed -->
 
-        <!-- RIght 'create post' column -->
-        <div class="right-column col-lg-3 d-lg-flex d-none flex-column">
-            <div class="create-post-bar">
-                <p>stuff</p>
-                <p>stuff</p>
-                <p>stuff</p>
-                <p>stuff</p>
-                <a href="{% url 'blog:create' %}">Create Post</a>
-            </div>
-        </div>
-        <!-- End right 'create post' column -->
+		<!-- Right 'create post' column  -->
+		<div class="right-column col-lg-3 d-lg-flex d-none flex-column">
 
-        
-    </div>
+			<div class="card create-post-bar d-flex flex-column p-3">
+				<img class="img-fluid d-block m-auto pb-2" src="{% static 'codingwithmitch_logo.png' %}" width="72" height="72">
+				<p class="lead">In this course you'll learn how to build a simple blog with user registration and blog CRUD functionality. Django is a powerful 
+  					framework and you'll see why in this course.</p>
+				<p class="m-auto"><a class="btn btn-primary" href="{% url 'blog:create' %}">Create post</a></p>
+			</div>
+		
+		</div>
+		<!-- end Right 'create post' column  -->
+
+	</div>
 </div>
-
-        
-   
 
 {% endblock content %}
