added search funtionality

--- a/blog/templates/blog/snippets/blog_post_snippet.html
+++ b/blog/templates/blog/snippets/blog_post_snippet.html
@@ -1,11 +1,15 @@
 <style type="text/css">
 	.card{
 		max-width: 700px;
+		width: 100%;
 	}
 	.card-body{
 		padding: 20px;
+	
 	}
 </style>
+
+{% if blog_post %}
 
 <div class="container">
 	<div class="row">
@@ -31,3 +35,19 @@
 		</div>
 	</div>
 </div>
+
+{% else %}
+<div class="container">
+	<div class="row">
+		<div class="card m-auto">
+			<div class="card-body mt-2 mb-2">
+				<h2 class="card-title">
+					No Results
+				</h2>
+				<p class="card-text">There were no results matching your search: "{{query}}".</p>
+			</div>
+		</div>
+	</div>
+</div>
+
+{% endif %}
