--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -1,13 +1,13 @@
 
-<style type="tex/css">
+<style type="text/css">
     .footer{
         min-height: 100px;
     }
 </style>
 
-<hr>
-<div class="d-flex flex-row align-items-center footer">
-    <p class="m-auto">Coding with Django is fun | 2020.</p>
+
+<div class="d-flex flex-row align-items-center footer bg-white  shadow-lg">
+    <p class="m-auto">TheCodingWitchProject| 2020.</p>
 </div>
 
 
