--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -18,17 +18,30 @@
 .card-deck .card {
   min-width: 220px;
 }
+.search-bar{
+  max-width: 500px;
+  width: 100%;
+}
 
 
 </style>
 
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+
         <h5 class="my-0 mr-md-auto font-weight-normal">
             {%  if request.user.is_authenticated %}
             <p>Hello, {{ request.user.username }}</p>
             {% endif %}
-        
         </h5>
+
+        <!-- search bare -->
+        <div class="search-bar mt-sm-2 mr-2">
+          <form action="" method="GET">
+            <input type="text" class="form-control" name='q' id='id_q' placeholder='Search...'>
+          </form>
+        </div>
+        <!-- end search bar -->
+
         <nav class="my-2 my-md-0 mr-md-3">
             {%  if request.user.is_authenticated %}
                 <a class="p-2 text-dark" href="{% url 'home' %}">Home</a>
@@ -41,5 +54,9 @@
             {% endif %}
         </nav>
     </div>
+
+    <script type="text/javascript">
+      document.getElementById("id_q").value = "{{query}}"
+    </script>
 
 
