--- a/personal/templates/personal/home.html
+++ b/personal/templates/personal/home.html
@@ -67,6 +67,10 @@
 		{% endif %}
 
 			<!-- End Blog posts-->
+			<!-- pagination -->
+
+		{% include "blog/snippets/blog_post_pagination.html" with blog_posts=blog_posts %}
+
 		</div>
 		<!-- end blog feed -->
 
